adding session intent, a queue for arrivals for users who intend to visit the site

--- a/src/config/simulation.yaml
+++ b/src/config/simulation.yaml
@@ -134,3 +134,6 @@ users:
     # Negative → lower early conversion
     # Positive → onboarding boost
     conversion_logit_shift: -0.8
+
+# session_intent:
+#   queue_capacity: null   # null = unbounded, or set an int like 100000
