--- a/src/config/simulation.yaml
+++ b/src/config/simulation.yaml
@@ -141,6 +141,27 @@ users:
 intent_resolver:
   enabled: true
 
+
+# ============================================================
+# Arrivals
+# ============================================================
+
+arrivals:
+  baseline_arrivals:
+    # arrival strategy for baseline traffic
+    model: "nhpp"
+
+    # mean baseline intents per day
+    daily_expected_intents: 2000
+
+    intraday_curve:
+      # intraday shape; normalized to integrate to daily_expected_intents
+      type: "gaussian_peak"
+      peak_hour: 12.0
+      spread_hours: 3.0
+      floor: 0.05
+
+
 # ============================================================
 # Sessions
 # ============================================================
